--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 	<title>Hello </title>
 </head>
 <body>
-This is my really great public website!
+This is my really great public website! <br>
+<img src = "img/Galaxy.jpg" alt =" A picture of a galaxy"
+	width: 250px height= 250px>
+ <a href = "http://www.w3schools.com/html/html_links.asp"> <br>
+ Click here for dank memes <br>
+
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/X5pFyjutIy4" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
 
