--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Hello </title>
-</head>
-<body>
-This is my really great public website! <br>
-<img src = "img/Galaxy.jpg" alt =" A picture of a galaxy"
-	width: 250px height= 250px>
- <a href = "http://www.w3schools.com/html/html_links.asp"> <br>
- Click here for dank memes <br>
+  <!DOCTYPE html>
+  <html>
+  <head>
+  	<title>Im too tired for this stuff</title>
+  	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  	<style type="text/css">
+  	body{
+  		background-image: url("Galaxy.jpg");
+  	}
+  	h1{
+  		font-family: 'Indie Flower', cursive;
+  		color: rgba(248,248,255, 1);
+  	}
+  	</style>
+  	</head>
 
- <iframe width="560" height="315" src="https://www.youtube.com/embed/X5pFyjutIy4" frameborder="0" allowfullscreen></iframe>
-</body>
-</html>
+  <body>
+  <h1>I need coffee</h1>
 
+  </body>
+  </html>
